refactor: switch to cilium gateway api (#163)
* refactor: switch to cilium gateway api

* cert-manager updates, cilium service updates

* refactor: flatten network namespace

* refactor: flux-instance use httproute

* update gatus configs

* cleanup prom service selectors

- https://github.com/onedr0p/home-ops/commit/ddcc9a390cc8c0fea3adb189a6901af283d3c22e

* migrate piraeus to volsync-system

* fix: file typo

* chore: cleanup old refs

* remove unused build-step

tunnel-id is provided through cluster-secrets

--- a/kubernetes/apps/network/cloudflare-dns/ks.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/ks.yaml
@@ -3,23 +3,22 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app gatus
-  namespace: &namespace observability
+  name: &app cloudflare-dns
+  namespace: &namespace network
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: onepassword-store
-      namespace: external-secrets
-    - name: openebs
-      namespace: openebs-system
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
+    - apiVersion: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      name: dnsendpoints.externaldns.k8s.io
   interval: 1h
-  path: ./kubernetes/apps/observability/gatus/app
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_SUBDOMAIN: status
+  path: ./kubernetes/apps/network/cloudflare-dns/app
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -28,4 +27,3 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: false
