--- a/kubernetes/apps/network/cloudflare-tunnel/app/kustomization.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/kustomization.yaml
@@ -3,14 +3,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./clusterissuer.yaml
+  - ./dnsendpoint.yaml
+  - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ./helmrepository.yaml
-  - ./prometheusrule.yaml
   - ./secret.sops.yaml
 configMapGenerator:
-  - name: cert-manager-values
+  - name: cloudflare-tunnel-configmap
     files:
-      - values.yaml=./helm/values.yaml
-configurations:
-  - ./helm/kustomizeconfig.yaml
+      - config.yaml=./resources/config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
