--- a/kubernetes/apps/network/unifi-dns/app/kustomization.yaml
+++ b/kubernetes/apps/network/unifi-dns/app/kustomization.yaml
@@ -3,4 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./ingress-nginx.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ./helmrepository.yaml
