--- a/kubernetes/apps/network/unifi-dns/ks.yaml
+++ b/kubernetes/apps/network/unifi-dns/ks.yaml
@@ -3,8 +3,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app gatus
-  namespace: &namespace observability
+  name: &app unifi-dns
+  namespace: &namespace network
 spec:
   commonMetadata:
     labels:
@@ -12,14 +12,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
-    - name: openebs
-      namespace: openebs-system
   interval: 1h
-  path: ./kubernetes/apps/observability/gatus/app
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_SUBDOMAIN: status
+  path: ./kubernetes/apps/network/unifi-dns/app
   prune: true
   retryInterval: 2m
   sourceRef:
