fix: dependency specification

--- a/kubernetes/apps/default/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/default/echo-server/app/helmrelease.yaml
@@ -17,8 +17,8 @@ spec:
     remediation:
       retries: 3
   dependsOn:
-  - name: cloudflared
-    namespace: network
+    - name: cloudflare-tunnel
+      namespace: network
   values:
     controllers:
       echo-server:
