fix: enable cilium gatewayclass creation
- https://github.com/cilium/cilium/blob/6e418e39c12133e31501451f14a16c57878518af/install/kubernetes/cilium/values.yaml#L1003

--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -18,6 +18,8 @@ endpointRoutes:
 gatewayAPI:
   enabled: true
   enableAlpn: true
+  gatewayClass:
+    create: true
 dashboards:
   enabled: true
 hubble:
