fix: create type

--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -19,7 +19,7 @@ gatewayAPI:
   enabled: true
   enableAlpn: true
   gatewayClass:
-    create: true
+    create: 'true'
 dashboards:
   enabled: true
 hubble:
