--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -1,24 +1,36 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.0/charts/library/common/values.schema.json
-envFrom:
-  - secretRef:
-      name: flame-secret
-route:
-  main:
-    enabled: true
-    hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
-    parentRefs:
-      - name: external
-        namespace: kube-system
-        sectionName: https
+controllers:
+  flame:
+    strategy: Recreate
+    containers:
+      app:
+        envFrom:
+          - secretRef:
+              name: flame-secret
+        resources:
+          requests:
+            cpu: 10m
+          limits:
+            memory: 128Mi
 persistence:
   config:
     enabled: true
     existingClaim: flame
 service:
-  main:
-    controller: main
+  app:
+    controller: &app flame
     ports:
       http:
         port: &port 5005
-        targetPort: *port
+route:
+  app:
+    hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
+    parentRefs:
+      - name: external
+        namespace: kube-system
+        sectionName: https
+    rules:
+      - backendRefs:
+        - name: *app
+          port: *port
