remove duplicate backendref rule
https://github.com/bjw-s/helm-charts/blob/b3dd7419eecb1a6d73fe8052b2a43f57d3c9f702/charts/library/common/values.yaml#L721

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -17,6 +17,12 @@ persistence:
   config:
     enabled: true
     existingClaim: flame
+service:
+  app:
+    controller: flame
+    ports:
+      http:
+        port: 5005
 route:
   app:
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
@@ -24,7 +30,3 @@ route:
       - name: external
         namespace: kube-system
         sectionName: https
-    rules:
-      - backendRefs:
-        - name: flame
-          port: 5005
