fix: toggle flame configs (#177)
* toggle flame configs

* remove duplicate backendref rule

https://github.com/bjw-s/helm-charts/blob/b3dd7419eecb1a6d73fe8052b2a43f57d3c9f702/charts/library/common/values.yaml#L721

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -19,10 +19,10 @@ persistence:
     existingClaim: flame
 service:
   app:
-    controller: &app flame
+    controller: flame
     ports:
       http:
-        port: &port 5005
+        port: 5005
 route:
   app:
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
@@ -30,7 +30,3 @@ route:
       - name: external
         namespace: kube-system
         sectionName: https
-    rules:
-      - backendRefs:
-        - name: *app
-          port: *port
