--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -1,30 +1,20 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.0/charts/library/common/values.schema.json
-controllers:
-  flame:
-    strategy: Recreate
-    containers:
-      app:
-        envFrom:
-          - secretRef:
-              name: flame-secret
-        resources:
-          requests:
-            cpu: 10m
-          limits:
-            memory: 128Mi
+env:
+  PASSWORD: "${FLAME_PASSWORD}"
 persistence:
   config:
     enabled: true
     existingClaim: flame
 service:
-  app:
-    controller: flame
+  main:
+    controller: main
     ports:
       http:
         port: 5005
 route:
-  app:
+  main:
+    enabled: true
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
     parentRefs:
       - name: external
