fix: update flame targetPort + backendRefs (#178)
* fix: update flame password ref

* add-back controller

* add back rules

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -22,11 +22,17 @@ service:
     controller: flame
     ports:
       http:
-        port: 5005
+        port: &port 5005
+        targetPort: *port
 route:
   app:
+    enabled: true
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
     parentRefs:
       - name: external
         namespace: kube-system
         sectionName: https
+    rules:
+      - backendRefs:
+        - name: flame
+          port: *port
