--- a/kubernetes/apps/default/flame/app/helmrelease.yaml
+++ b/kubernetes/apps/default/flame/app/helmrelease.yaml
@@ -23,3 +23,13 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: flame-values
+  postRenderers:
+    - kustomize:
+        patches:
+          - target:
+              kind: HTTPRoute
+              version: gateway.networking.k8s.io/v1alpha2
+            patch: |-
+              - op: replace
+                path: /apiVersion
+                value: gateway.networking.k8s.io/v1
