--- a/kubernetes/apps/default/flame/app/helmrelease.yaml
+++ b/kubernetes/apps/default/flame/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app flame
+  name: flame
 spec:
   interval: 1h
   chartRef:
@@ -23,16 +23,3 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: flame-values
-  values:
-    route:
-      app:
-        enabled: true
-        hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
-        parentRefs:
-          - name: external
-            namespace: kube-system
-            sectionName: https
-        rules:
-          - backendRefs:
-            - name: *app
-              port: 5005
