--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -7,6 +7,7 @@ persistence:
 route:
   main:
     enabled: true
+    apiVersion: gateway.networking.k8s.io/v1
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
     parentRefs:
       - name: external
