--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -1,13 +1,29 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.7.3/charts/library/common/values.schema.json
+controllers:
+  flame:
+    strategy: RollingUpdate
+    containers:
+      app:
+        image:
+          repository: pawelmalak/flame
+          tag: multiarch2.3.1
+          pullPolicy: IfNotPresent
+        envFrom:
+          - secretRef:
+              name: flame-secret
+        resources:
+          requests:
+            cpu: 10m
+          limits:
+            memory: 128Mi
 persistence:
   config:
     enabled: true
     existingClaim: flame
 route:
-  main:
+  app:
     enabled: true
-    apiVersion: gateway.networking.k8s.io/v1
     hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
     parentRefs:
       - name: external
@@ -18,9 +34,18 @@ route:
         - name: flame
           port: 5005
 service:
-  main:
-    controller: main
+  app:
+    controller: flame
     ports:
       http:
         port: &port 5005
         targetPort: *port
+serviceMonitor:
+  app:
+    serviceName: flame
+    endpoints:
+      - port: http
+        scheme: http
+        path: /metrics
+        interval: 1m
+        scrapeTimeout: 10s
