--- a/kubernetes/apps/default/flame/app/helmrelease.yaml
+++ b/kubernetes/apps/default/flame/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: flame
+    name: app-template
   install:
     remediation:
       retries: 3
@@ -20,16 +20,10 @@ spec:
   dependsOn:
     - name: openebs
       namespace: openebs-system
+    - name: cloudflare-tunnel
+      namespace: network
   valuesFrom:
     - kind: ConfigMap
       name: flame-values
-  postRenderers:
-    - kustomize:
-        patches:
-          - target:
-              kind: HTTPRoute
-              version: gateway.networking.k8s.io/v1alpha2
-            patch: |-
-              - op: replace
-                path: /apiVersion
-                value: gateway.networking.k8s.io/v1
+    - kind: Secret
+      name: flame-secret
