fix: update flame externalsecret password ref

--- a/kubernetes/apps/default/flame/app/externalsecret.yaml
+++ b/kubernetes/apps/default/flame/app/externalsecret.yaml
@@ -13,6 +13,7 @@ spec:
     template:
       data:
         FLAME_PASSWORD: "{{ .FLAME_PASSWORD }}"
+        PASSWORD: "{{ .FLAME_PASSWORD }}"
         PUSHOVER_TOKEN: "{{ .FLAME_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
