feat: Add 'http → https' redirects httproutes
- https://github.com/onedr0p/home-ops/commit/73ba89f80de4274115c19a381e54cd642f5bb8f0

--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -23,7 +23,7 @@ spec:
       hostname: "*.igloo.sh"
       allowedRoutes:
         namespaces:
-          from: All
+          from: Same
     - name: https
       protocol: HTTPS
       port: 443
