update configmap name

--- a/kubernetes/apps/observability/grafana/app/kustomization.yaml
+++ b/kubernetes/apps/observability/grafana/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./helmrelease.yaml
   - ./helmrepository.yaml
 configMapGenerator:
-  - name: flame-values
+  - name: grafana-values
     files:
       - values.yaml=./helm/values.yaml
 configurations:
