--- a/kubernetes/apps/observability/grafana/app/helm/values.yaml
+++ b/kubernetes/apps/observability/grafana/app/helm/values.yaml
@@ -35,6 +35,13 @@ datasources:
         access: proxy
         url: http://prometheus-operated.observability.svc.cluster.local:9090
         isDefault: true
+      - name: Loki
+        type: loki
+        uid: loki
+        access: proxy
+        url: http://loki-headless.observability.svc.cluster.local:3100
+        jsonData:
+          maxLines: 250
       - name: Alertmanager
         type: alertmanager
         uid: alertmanager
