fix: loki storageClass

--- a/kubernetes/apps/observability/loki/app/helm/values.yaml
+++ b/kubernetes/apps/observability/loki/app/helm/values.yaml
@@ -41,7 +41,7 @@ singleBinary:
   replicas: 1
   persistence:
     enabled: true
-    storageClass: ceph-block
+    storageClass: openebs-hostpath
     size: 20Gi
 gateway:
   replicas: 0
