--- a/kubernetes/apps/default/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/default/home-assistant/app/externalsecret.yaml
@@ -12,12 +12,10 @@ spec:
     name: home-assistant-secret
     template:
       data:
-        HASS_DARKSKY_API_KEY: "{{ .HASS_DARKSKY_API_KEY }}"
-        HASS_ECOBEE_API_KEY: "{{ .HASS_ECOBEE_API_KEY }}"
         HASS_ELEVATION: "{{ .HASS_ELEVATION }}"
         HASS_LATITUDE: "{{ .HASS_LATITUDE }}"
         HASS_LONGITUDE: "{{ .HASS_LONGITUDE }}"
-        HASS_PIRATE_WEATHER_API_KEY: "{{ .HASS_PIRATE_WEATHER_API_KEY }}"
+        # HASS_PIRATE_WEATHER_API_KEY: "{{ .HASS_PIRATE_WEATHER_API_KEY }}"
   dataFrom:
     - extract:
         key: home-assistant
