--- a/kubernetes/apps/default/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/default/home-assistant/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./pvc.yaml
   - ./helmrelease.yaml
 configMapGenerator:
-  - name: hass-values
+  - name: home-assistant-values
     files:
       - values.yaml=./helm/values.yaml
 configurations:
