--- a/kubernetes/apps/default/home-assistant/app/helm/values.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helm/values.yaml
@@ -34,7 +34,7 @@ defaultPodOptions:
     fsGroupChangePolicy: OnRootMismatch
 service:
   app:
-    controller: home-assistant
+    controller: &app home-assistant
     ports:
       http:
         port: &port 8123
