--- a/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/kubernetes/apps/default/home-assistant/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: openebs
       namespace: openebs-system
+    - name: onepassword-store
+      namespace: external-secrets
   interval: 1h
   path: ./kubernetes/apps/default/home-assistant/app
   postBuild:
