chore: add external-dns prometheusrule
- https://github.com/onedr0p/home-ops/commit/71df80aa7887f8458ce13bd798013bfa588515fa

--- a/kubernetes/apps/network/cloudflare-dns/app/kustomization.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./helmrepository.yaml
+  - ./prometheusrule.yaml
   - ./secret.sops.yaml
