chore: use not canceled in status checks
- https://github.com/onedr0p/home-ops/commit/bc60064014737ca67ae1ee68e1d5305b9d7ee0c4

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -113,7 +113,7 @@ jobs:
     name: Flux Local - Success
     needs: ["test", "diff"]
     runs-on: ubuntu-latest
-    if: ${{ always() }}
+    if: ${{ !cancelled() }}
     steps:
       - name: Any jobs failed?
         if: ${{ contains(needs.*.result, 'failure') }}
