--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -7,23 +7,11 @@ helmDefaults:
   waitForJobs: true
 
 repositories:
-  - name: controlplaneio
-    url: ghcr.io/controlplaneio-fluxcd/charts
-    oci: true
-
-  - name: coredns
-    url: ghcr.io/coredns/charts
-    oci: true
-
   - name: cilium
     url: https://helm.cilium.io
 
   - name: jetstack
     url: https://charts.jetstack.io
-
-  - name: spegel
-    url: ghcr.io/spegel-org/helm-charts
-    oci: true
 
 releases:
   - name: cilium
@@ -36,7 +24,7 @@ releases:
   - name: coredns
     namespace: kube-system
     atomic: true
-    chart: coredns/coredns
+    chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.1
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/coredns/app/helm/values.yaml']
     needs: ['kube-system/cilium']
@@ -44,7 +32,7 @@ releases:
   - name: spegel
     namespace: kube-system
     atomic: true
-    chart: spegel/spegel
+    chart: oci://ghcr.io/spegel-org/helm-charts/spegel
     version: 0.1.0
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/spegel/app/helm/values.yaml']
     needs: ['kube-system/coredns']
@@ -68,7 +56,7 @@ releases:
   - name: flux-operator
     namespace: flux-system
     atomic: true
-    chart: controlplaneio/flux-operator
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.18.0
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/app/helm/values.yaml']
     needs: ['external-secrets/external-secrets']
@@ -76,7 +64,7 @@ releases:
   - name: flux-instance
     namespace: flux-system
     atomic: true
-    chart: controlplaneio/flux-instance
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.18.0
     wait: false
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/instance/helm/values.yaml']
