--- a/kubernetes/apps/servarr/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/prowlarr/app/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
+        hostnames: ["{{ .Release.Name }}.igloo.sh"]
         parentRefs:
           - name: internal
             namespace: kube-system
