--- a/kubernetes/apps/servarr/radarr/ks.yaml
+++ b/kubernetes/apps/servarr/radarr/ks.yaml
@@ -12,8 +12,8 @@ spec:
   components:
     - ../../../../components/gatus/guarded
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+    - name: openebs
+      namespace: openebs-system
   interval: 1h
   path: ./kubernetes/apps/servarr/radarr/app
   postBuild:
