--- a/kubernetes/apps/servarr/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/radarr/app/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
             port: *port
     route:
       app:
-        hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
+        hostnames: ["{{ .Release.Name }}.igloo.sh"]
         parentRefs:
           - name: internal
             namespace: kube-system
