--- a/kubernetes/apps/servarr/kustomization.yaml
+++ b/kubernetes/apps/servarr/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
   - ../../components/repos/app-template
 resources:
+  - ./bazarr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
