--- a/kubernetes/apps/servarr/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/tools/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     name: app-template
   install:
     remediation:
-      retries: -1
+      retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
@@ -33,53 +33,63 @@ spec:
               repository: ghcr.io/buroa/qbtools
               tag: v0.19.16@sha256:2b90924170f62083cf01646e41bda92319ad641e7627add59e15b2b21c6f8cd1
             env:
-              QBITTORRENT_HOST: qbittorrent.default.svc.cluster.local
+              QBITTORRENT_HOST: qbittorrent.servarr.svc.cluster.local
               QBITTORRENT_PORT: 80
-              SABNZBD_HOST: sabnzbd.default.svc.cluster.local
+              SABNZBD_HOST: sabnzbd.servarr.svc.cluster.local
               SABNZBD_PORT: 80
             envFrom:
               - secretRef:
                   name: qbtools-secret
-            args: [
-              "tagging",
-              "--added-on",
-              "--expired",
-              "--last-activity",
-              "--sites",
-              "--unregistered"
-            ]
+            args:
+              - tagging
+              - --added-on
+              - --expired
+              - --last-activity
+              - --sites
+              - --unregistered
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
+                memory: 128Mi
                 cpu: 25m
               limits:
                 memory: 256M
         containers:
-          unregistered:
-            <<: *container
-            args: [
-              "prune",
-              "--exclude-category", "manual",
-              "--exclude-category", "music",
-              "--exclude-tag", "added:1d",
-              "--include-tag", "unregistered",
-              "--with-data"
-              # "--dry-run"
-            ]
           expired:
             <<: *container
-            args: [
-              "prune",
-              "--exclude-category", "manual",
-              "--exclude-category", "music",
-              "--exclude-tag", "added:1d",
-              "--include-tag", "expired",
-              "--with-data"
-              # "--dry-run"
-            ]
+            args:
+              - prune
+              - --exclude-category
+              - manual
+              - --exclude-category
+              - cross-seed
+              - --exclude-category
+              - music
+              - --exclude-tag
+              - added:1d
+              - --include-tag
+              - expired
+              - --with-data
+              # - --dry-run
+          unregistered:
+            <<: *container
+            args:
+              - prune
+              - --exclude-category
+              - manual
+              - --exclude-category
+              - cross-seed
+              - --exclude-category
+              - music
+              - --exclude-tag
+              - added:1d
+              - --include-tag
+              - unregistered
+              - --with-data
+              # - --dry-run
         pod:
           restartPolicy: Never
       orphaned:
@@ -91,32 +101,38 @@ spec:
         containers:
           app:
             <<: *container
-            args: [
-              "orphaned",
-              "--exclude-pattern", "*_unpackerred*",
-              # "--dry-run"
-            ]
+            args:
+              - orphaned
+              - --exclude-pattern
+              - "*/manual/*"
+              - --exclude-pattern
+              - "*/cross-seed/*"
+              - --exclude-pattern
+              - "*_unpackerred*"
+              # - --dry-run
         pod:
           restartPolicy: Never
       reannounce:
         containers:
           app:
             <<: *container
-            args: [
-              "reannounce",
-              "--process-seeding"
-            ]
+            args:
+              - reannounce
+              - --process-seeding
       limiter:
         containers:
           app:
             <<: *container
-            args: [
-              "limiter",
-              "--max-line-speed-mbps", "100",
-              "--max-percent", "0.8",
-              "--limit-percent", "0.4",
-              "--interval", "5"
-            ]
+            args:
+              - limiter
+              - --max-line-speed-mbps
+              - "100"
+              - --max-percent
+              - "0.8"
+              - --limit-percent
+              - "0.4"
+              - --interval
+              - "5"
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -132,10 +148,10 @@ spec:
             readOnly: true
       media:
         type: nfs
-        server: expanse.internal
-        path: /mnt/eros/Media
+        server: 100.68.189.69  # helios64.shark-tone.ts.net
+        path: /export/Glacier02/Media
         advancedMounts:
           orphaned:
             app:
-              - path: /media/Downloads/qbittorrent
+              - path: /data/nas-media/Downloads/qbittorrent
                 subPath: Downloads/qbittorrent
