--- a/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/qbittorrent/app/helmrelease.yaml
@@ -28,11 +28,11 @@ spec:
               tag: 5.0.4@sha256:995c561247b069c10b1fa098186f35b3155c2df63912041f70637a9232755756
             env:
               TZ: America/Los_Angeles
-              QBT_WEBUI_PORT: &port 80
-              QBT_TORRENTING_PORT: &torrentPort 50413
+              QBT_WEBUI_PORT: &port 8080
+              QBT_TORRENTING_PORT: 50413
               CROSS_SEED_ENABLED: false
               CROSS_SEED_HOST: cross-seed.default.svc.cluster.local
-              CROSS_SEED_PORT: 80
+              CROSS_SEED_PORT: 2468
               CROSS_SEED_SLEEP_INTERVAL: 0
               PUSHOVER_ENABLED: true
             envFrom:
@@ -63,8 +63,9 @@ spec:
             resources:
               requests:
                 cpu: 100m
+                memory: 2Gi
               limits:
-                memory: 8Gi
+                memory: 4Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -75,17 +76,10 @@ spec:
     service:
       app:
         controller: qbittorrent
-        type: LoadBalancer
-        annotations:
-          lbipam.cilium.io/ips: 192.168.42.122, ::ffff:192.168.42.122
         ports:
           http:
             primary: true
             port: *port
-          bittorrent:
-            enabled: true
-            port: *torrentPort
-            protocol: TCP
     route:
       app:
         hostnames:
@@ -108,12 +102,12 @@ spec:
         defaultMode: 0775
         globalMounts:
           - readOnly: true
-      media:
+      downloads:
         type: nfs
-        server: expanse.internal
-        path: /mnt/eros/Media
+        server: 100.68.189.69  # helios64.shark-tone.ts.net
+        path: /export/Glacier02/Media
         globalMounts:
-          - path: /media/Downloads/qbittorrent
+          - path: /data/nas-media/Downloads/qbittorrent
             subPath: Downloads/qbittorrent
       tmp:
         type: emptyDir
