--- a/kubernetes/apps/servarr/kustomization.yaml
+++ b/kubernetes/apps/servarr/kustomization.yaml
@@ -9,6 +9,7 @@ components:
 resources:
   - ./bazarr/ks.yaml
   - ./prowlarr/ks.yaml
+  - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
   - ./sonarr/ks.yaml
