feat: introduce cross-seed
- https://kubesearch.dev/hr/ghcr.io-bjw-s-helm-app-template-cross-seed

--- a/kubernetes/apps/servarr/kustomization.yaml
+++ b/kubernetes/apps/servarr/kustomization.yaml
@@ -8,6 +8,7 @@ components:
   - ../../components/repos/app-template
 resources:
   - ./bazarr/ks.yaml
+  - ./cross-seed/ks.yaml
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
