--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -31,7 +31,7 @@ spec:
             matchMode: "strict",
             outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
-            qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local",
+            qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
             radarr: [
               "http://radarr.servarr.svc.cluster.local/?apikey={{ .RADARR_API_KEY }}"
             ],
