--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -33,11 +33,11 @@ spec:
             port: Number(process.env.CROSS_SEED_PORT),
             qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
             radarr: [
-              "http://radarr.servarr.svc.cluster.local/?apikey={{ .RADARR_API_KEY }}"
+              "http://radarr.servarr.svc.cluster.local:7878/?apikey={{ .RADARR_API_KEY }}"
             ],
             skipRecheck: true,
             sonarr: [
-              "http://sonarr.servarr.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"
+              "http://sonarr.servarr.svc.cluster.local:8989/?apikey={{ .SONARR_API_KEY }}"
             ],
             torznab: [],
             // torznab: [
