--- a/kubernetes/apps/servarr/kustomization.yaml
+++ b/kubernetes/apps/servarr/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
   - ../../components/repos/app-template
 resources:
+  - ./autobrr/ks.yaml
   - ./bazarr/ks.yaml
   - ./cross-seed/ks.yaml
   - ./prowlarr/ks.yaml
