--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -107,6 +107,15 @@ spec:
     serviceAccount:
       create: true
       name: gatus
+    serviceMonitor:
+      app:
+        serviceName: *app
+        endpoints:
+        - port: http
+          scheme: http
+          path: /metrics
+          interval: 1m
+          scrapeTimeout: 10s
     persistence:
       config:
         existingClaim: gatus
