--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -27,7 +27,8 @@ spec:
     image: # TODO: Remove this block when new chart version is released
       repository: registry.k8s.io/external-dns/external-dns
       tag: v0.16.1
-    provider: cloudflare
+    provider:
+      name: cloudflare
     env:
       - name: &name CF_API_TOKEN
         valueFrom:
