--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -29,6 +29,9 @@ spec:
             ],
             linkType: "hardlink",
             matchMode: "strict",
+            notificationWebhookUrls: [
+              "http://webhook.default.svc.cluster.local/hooks/cross-seed-pushover"
+            ],
             outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
             qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local:8080",
