--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -10,9 +10,6 @@ repositories:
   - name: cilium
     url: https://helm.cilium.io
 
-  - name: jetstack
-    url: https://charts.jetstack.io
-
 releases:
   - name: cilium
     namespace: kube-system
@@ -40,7 +37,7 @@ releases:
   - name: cert-manager
     namespace: cert-manager
     atomic: true
-    chart: jetstack/cert-manager
+    chart: oci://quay.io/jetstack/charts/cert-manager
     version: v1.17.1
     values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/cert-manager/cert-manager/app/helm/values.yaml']
     needs: ['kube-system/spegel']
