--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrepository.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrepository.yaml
@@ -1,10 +1,14 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrepository-source-v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
-  name: jetstack
-  namespace: cert-manager # Required for Renovate lookups
+  name: cert-manager
 spec:
-  interval: 12h
-  url: https://charts.jetstack.io
+  interval: 5m
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: v1.17.1
+  url: oci://quay.io/jetstack/charts/cert-manager
