--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
@@ -6,6 +6,6 @@ metadata:
   name: actions-runner-controller
   namespace: actions-runner-system # Required for Renovate lookups
 spec:
-  interval: 1h
+  interval: 5m
   type: oci
   url: oci://ghcr.io/actions/actions-runner-controller-charts
