fix: cross-server urls

--- a/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/servarr/cross-seed/app/externalsecret.yaml
@@ -25,13 +25,13 @@ spec:
             includeSingleEpisodes: true,
             linkCategory: "cross-seed",
             linkDirs: [
-              "/media/Downloads/qbittorrent/complete/cross-seed"
+              "/data/nas-media/Downloads/qbittorrent/complete/cross-seed"
             ],
             linkType: "hardlink",
             matchMode: "strict",
             outputDir: null,
             port: Number(process.env.CROSS_SEED_PORT),
-            qbittorrentUrl: "http://qbittorrent.default.svc.cluster.local",
+            qbittorrentUrl: "http://qbittorrent.servarr.svc.cluster.local",
             skipRecheck: true,
             torznab: [],
             useClientTorrents: true
