--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.20.13
         ports:
           http:
-            port: 8096
+            port: &port 8096
     route:
       app:
         hostnames:
