fix: update jellyfin probe path

--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /health
+                    path: /
                     port: http
                   initialDelaySeconds: 0
                   periodSeconds: 10
