chore: cleanup jellyfin  port setting

--- a/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/servarr/jellyfin/app/helmrelease.yaml
@@ -27,9 +27,12 @@ spec:
               repository: ghcr.io/jellyfin/jellyfin
               tag: 10.10.7.20250405-191553@sha256:e4d1dc5374344446a3a78e43dd211247f22afba84ea2e5a13cbe1a94e1ff2141
             env:
-              TZ: America/Los_Angeles
-              JELLYFIN_PublishedServerUrl: https://{{ .Release.Name }}.igloo.sh
               DOTNET_SYSTEM_IO_DISABLEFILELOCKING: "true"
+              JELLYFIN_PublishedServerUrl: https://{{ .Release.Name }}.igloo.sh
+              TZ: America/Los_Angeles
+            ports:
+              - containerPort: 8096
+                name: http
             probes:
               liveness: &probes
                 enabled: true
@@ -37,7 +40,7 @@ spec:
                 spec:
                   httpGet:
                     path: /
-                    port: 8096
+                    port: http
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -78,7 +81,6 @@ spec:
         ports:
           http:
             port: &port 8096
-            targetPort: *port
     route:
       app:
         hostnames:
