feat: introduce readeck
- https://kubesearch.dev/hr/ghcr.io-bjw-s-helm-app-template-readeck#hr

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ./echo-server/ks.yaml
   - ./flame/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./readeck/ks.yaml
   - ./webhook/ks.yaml
