temp: disable pushsecret

--- a/kubernetes/apps/kube-system/cilium/gateway/kustomization.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./certificate.yaml
   - ./external.yaml
   - ./internal.yaml
-  - ./pushsecret.yaml
+  # - ./pushsecret.yaml
   - ./redirect.yaml
