chore: re-attempt initial OSD device name

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -84,6 +84,8 @@ spec:
         useAllDevices: false
         nodes:
           - name: dell-node-01
+            devices:
+              - name: sda
         config:
           osdsPerDevice: "1"
     cephBlockPools:
