chore: migrate gatus to ceph storage

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -93,7 +93,7 @@ spec:
         spec:
           failureDomain: host
           replicated:
-            size: 3
+            size: 1 # TODO: set to 3, when disks added
         storageClass:
           enabled: true
           name: ceph-block
