--- a/kubernetes/apps/observability/gatus/ks.yaml
+++ b/kubernetes/apps/observability/gatus/ks.yaml
@@ -12,8 +12,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
-    - name: openebs
-      namespace: openebs-system
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 1h
   path: ./kubernetes/apps/observability/gatus/app
   postBuild:
