update renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -97,6 +97,15 @@
       }
     },
     {
+      "description": "Rook-Ceph Group",
+      "groupName": "Rook-Ceph",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/rook-ceph/", "/rook-ceph-cluster/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group",
+      },
+    },
+    {
       "description": ["Spegel Group"],
       "groupName": "Spegel",
       "matchDatasources": ["docker"],
