chore: migrate home-assistant to ceph storage

--- a/kubernetes/apps/default/home-assistant/app/pvc.yaml
+++ b/kubernetes/apps/default/home-assistant/app/pvc.yaml
@@ -8,16 +8,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: openebs-hostpath
----
-# TODO: move configuration volume to volsync when rook-ceph is live
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: home-assistant
-spec:
-  accessModes: ["ReadWriteOnce"]
-  resources:
-    requests:
-      storage: 10Gi
-  storageClassName: openebs-hostpath
+  storageClassName: ceph-block
