chore: migrate cross-seed to ceph storage

--- a/kubernetes/apps/servarr/cross-seed/ks.yaml
+++ b/kubernetes/apps/servarr/cross-seed/ks.yaml
@@ -9,9 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../components/volsync
   dependsOn:
-    - name: openebs
-      namespace: openebs-system
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: onepassword-store
       namespace: external-secrets
   interval: 1h
@@ -19,6 +21,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_CAPACITY: 2Gi
   prune: true
   retryInterval: 2m
   sourceRef:
