chore: add additional sata SSD for ceph storage

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -86,6 +86,9 @@ spec:
           - name: dell-node-01
             devices:
               - name: sda
+          - name: dell-node-02
+            devices:
+              - name: sda
         config:
           osdsPerDevice: "1"
     cephBlockPools:
