fix: update flame mountpath

--- a/kubernetes/apps/default/flame/app/helm/values.yaml
+++ b/kubernetes/apps/default/flame/app/helm/values.yaml
@@ -21,6 +21,8 @@ persistence:
   config:
     enabled: true
     existingClaim: flame
+    globalMounts:
+      - path: /app/data
 route:
   app:
     enabled: true
